# yoshibookmarks

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  cmdai_learning.json  pyproject.toml  requirements.txt  setup.py  spec.md
.claude/: settings.local.json
.github/workflows/: daily-repo-status.lock.yml  daily-repo-status.md  docs-sync.lock.yml  docs-sync.md
UserstsuyoReposyoshibookmarktest_config/: config.yaml
extension/yoshibookmark-extension/: README.md  api-client.js  content.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js
src/yoshibookmark/: __init__.py  cli.py  config.py
src/yoshibookmark/api/: __init__.py  bookmarks.py  health.py  ingest.py  recall.py
src/yoshibookmark/core/: __init__.py  ai_inference.py  bookmark_manager.py  content_analyzer.py  ingestion_service.py  recall_service.py  storage_manager.py
src/yoshibookmark/models/: bookmark.py  config.py  storage.py
src/yoshibookmark/utils/: file_lock.py  url_utils.py  yaml_handler.py
src/yoshibookmark/web/static/: index.html
src/yoshibookmark/web/static/css/: styles.css
src/yoshibookmark/web/static/js/: app.js
tests/: __init__.py  test_ai_inference.py  test_api_bookmarks.py  test_api_ingest.py  test_api_recall.py  test_bookmark_manager.py  test_bookmark_model.py  test_cli.py  test_config.py  test_content_analyzer.py  test_storage_manager.py
